--- a/index.org
+++ b/index.org
@@ -20,14 +20,152 @@ interests are:
   programming]]\\
 - Debating
 
+* [[file:humor.html][Humor]]
+
+* Marijuana Legalization in the Indian Context
+#+CAPTION: Source: The New York Times
+#+ATTR_HTML: :width 100% :height 100%
+[[https://static01.nyt.com/images/2021/04/20/multimedia/20onpolitics-02/20onpolitics-02-jumbo.jpg?quality=90&auto=webp]]
+
+** The History of Marijuana Usage in India and its uses
+#+CAPTION: Parvati offering Shiva /Bhang/, a beverage made using cannabis
+#+ATTR_HTML: :width 100% :height 100%
+[[https://cdn.exoticindia.com/images/products/original/hindu/hb53.jpg]]
+
+Cannabis is a substance linked to India since the very beginning (/Cannabis Indica/- It's in the
+name!). The first documentation of the plant in India is in the Vedas, so anywhere from 1
+400 to 2000 BCE![fn:1] Just the age of the plant could be enough to classify it as
+inseparable to the nation's culture- as it has found its way into the cuisine, tradition, and religion
+of India. So it should come as no surprise that marijuana usage was (and still is
+) widespread in India.
+
+# Traditionally, many parts of the cannabis crop are used in making consumable substances-
+# /Charas/ from the resin, /Bhang/ from the leaves, and /Ganja/ from the flowers.
+
+Cannabis is more than just an old plant. Not only is it well-known as a recreational and
+medicinal drug, but strains of the cannabis crop can be used to make _rope, fabric, and
+possibly even semiconductors_![fn:2]
+
+# * Composition of the plant
+# The two main substances in the plant (the /cannabinoids/) are THC and CBD. THC is a psychoactive element, and causes the "high" that comes with recreational forms of the of the plant. CBD, on the other hand, is a medicinal substance which is shown as an effective anti-seizure medicine, pain-reliever, and more.[fn:3]
+
+** Why we should Legalize Cannabis:
+*** Cannabis is less dangerous than already-legal drugs
+The fundamental argument for the full legalization of the crop is simply that it makes no
+sense for a plant with established, cultural and medical uses to remain banned. Marijuana
+as a drug has been proven to be less harmful than other, widely-available substances
+like alcohol or tobacco[fn:4]. Therefore, legalizing the drug and giving adults the *liberty*
+to access a cultural, medical, and recreational product isn't unreasonable. I believe in
+making marijuana no less accessible than cigarettes.
+
+#+begin_quote
+That the only purpose for which power can be rightfully exercised over any
+member of a civilized community, against his will, is to prevent harm to others.
+#+end_quote
+#+begin_center
+John S. Mill, /On Liberty/
+#+end_center
+
+*** Bans are expensive (and legalization is profitable)
+#+ATTR_HTML: :width 100% :height 100%
+#+CAPTION: Source: The Atlantic
+[[https://cdn.theatlantic.com/thumbor/P4iUHiPggG7vLRywAMcewnWiLPA=/0x331:3000x2019/1952x1098/media/img/mt/2015/06/AP321028026/original.jpg]]
+
+Banning any addictive substance, let alone one of traditional significance, is (for lack
+of a better description) a massive pain in the rear +(source: trust me bro)+. Not just
+history, but by the present too is evidence of this. Weed is still found *everywhere* in
+India, and perhaps not *despite* its legality, but *because* of it (think: teens being
+drawn to exciting, illegal activities).
+
+While I cannot claim that marijuana is totally safe- for a ban of such a substance to be
+enforced properly, it would take an astronomical sum of money. And it still cannot be
+100% effective. The other possibility is that it would spawn black markets giving
+people access to unregulated, harmful variations of the plant, which is the state of
+things currently.
+
+The fact is this: *the people want weed, and they will get weed.* Whether they will get
+this from a regulated, safe dispensary or from a drug dealer who laces it with fentanyl
+is the only thing that the government can control.
+
+# What's more; every illegal transaction involving marijuana adds danger and volatility
+# for the users of the drug, but also adds to the cum of money that the government misses
+# out on by not legalizing it.
+Every pair of hands that a bag of marijuana crosses adds not just more danger to the
+person smoking it, but also a rupee the government missed out on. Not only
+can marijuana act as a source of income, legalizing it can also let the government
+dictate who should (and shouldn't) have access to herb. This allows prevention of the
+substance from reaching, say, people with a history of mental illness or ex-convicts or
+/teenagers/.
+
+What's more is that severe punishments for possession will discourage those who suffer from
+addictions to these substances to seek help or go to rehab, fearing they might get be charged
+with crime.
+
+*** Marijuana as a medical herb
+#+ATTR_HTML: :width 100% :height 100%
+#+CAPTION: Source: Harvard Health
+[[https://domf5oio6qrcr.cloudfront.net/medialibrary/10941/iStock-1015545230.jpg]]
+
+Marijuana is a drug with medicinal properties, and while some of the rumored medicinal
+properties are proven, others are not. Those against decriminalization of marijuana often
+cite the inefficiency of CBD products as proof that the argument for medical marijuana is
+invalid[fn:5]. First of all, I believe that marijuana should be legalized even if it has no
+medicinal properties (the other arguments for legalization are of more importance). Secondly,
+inefficiencies in the current state of cannabis-based drugs does not mean the plant itself
+lacks medical merit. This makes an interesting case, and highlights the duality of the herb.
+
+**** Marijuana as tobacco
+One side of the leaf on making the case for (or against) marijuana is its recreational uses.
+This makes it similar to tobacco- both are addictive, recreational drugs.
+
+One might be less harmful, but make no mistake- there's no denying that both
+these substances have adverse effects on health. An extension of this fact is that both THC and
+nicotine cause more harm to teenagers than adults, meaning that it's more important to prevent
+this group from accessing the drug. Leaving things as they are, with a loosely-enforced ban, is
+the worst possible scenario.
+
+**** Marijuana as opium
+The other side of the leaf is that cannabis and cannabanoids possess medical properties. This aspect
+of the plant is similar to opium, the chemicals from which (/opioids and opiates/) are used for
+medical reasons. While opioids are considered to be more effective and specialized- CBD-based
+medicines have also showed efficacy[fn:6]. While exact uses and efficacies of the chemicals are still
+under research[fn:7], the key point is that there is a wide array of possibilities with the drugs.
+
+In addition, it takes a long time to research and develop medicines. Developing drugs from the cannabis
+crop will take time- and it is harder to perform precise studies on the safety of the drug while it's
+illegal. Cannabis-based drugs require research and studies that could benefit immensely from its
+legalization.
+
+*** Marijuana is a gateway drug
+Another often-used phrase in the marijuana debate is /"gateway drug"/. The argument is that marijuana usage
+opens the gate and makes people more likely to try out other, more dangerous drugs- like cocaine or heroin.
+
+This is obvious, considering the places that one has to go through to obtain recreational marijuana. A cigarette
+smoker and a weed smoker have to go to very different places to obtain their substances (one of which
+consists of exposure to more serious crimes), and the only way to stop this is to make cannabis available
+in safe, regulated places- in other words, legalization.
+
+Cannabis might be a gateway, and when closing it off entirely isn't possible- the best thing to do is to protect
+those who enter it and restrict entry.
+
+*** Conclusion
+To conclude, I firmly believe that the issue with marijuana addiction can be resolved only through legalization.
+Marijuana should be made available to the consenting adult population, just like cigarettes. The taxes paid by
+smokers should be used to rehabilitate addicts. Those seeking the recreational or cultural aspects of pot should
+have the liberty to do so; along with information on exactly how the plant is damaging to health. In addition,
+pharmaceutical companies should permitted to use cannabis and its derivatives in medical products for research
+purposes.
+
+** Footnotes
+[fn:7][[https://www.scientificamerican.com/article/can-cbd-cure-what-ails-you/][Can CBD Cure What Ails You?]]
+[fn:6][[https://www.fda.gov/news-events/press-announcements/fda-approves-first-drug-comprised-active-ingredient-derived-marijuana-treat-rare-severe-forms][FDA Approves First Drug Comprised of an Active Ingredient Derived from Marijuana to Treat Rare, Severe Forms of Epilepsy]]
+[fn:5][[https://www.financialexpress.com/opinion/why-cannabis-shouldnt-be-legalised-in-india/1455236/][Why cannabis shouldn’t be legalised in India]]
+[fn:4][[https://www.ucsf.edu/news/2012/01/98519/marijuana-shown-be-less-damaging-lungs-tobacco][Marijuana Shown to Be Less Damaging to Lungs Than Tobacco]]
+[fn:3][[https://www.health.harvard.edu/blog/cannabidiol-cbd-what-we-know-and-what-we-dont-2018082414476][Cannabidiol (CBD)-what we know and what we don't]]
+[fn:2][[https://www.forbes.com/sites/forbestechcouncil/2018/10/23/the-age-of-hemp-global-advanced-industrial-applications/?sh=e508ac820cd9][The Age Of Hemp: Global Advanced Industrial Applications]]
+[fn:1][[https://www.psychologytoday.com/intl/blog/the-teenage-mind/201106/history-cannabis-in-india][History of Cannabis in India]]
 * /GitHub/ Copilot
-  :PROPERTIES:
-  :CUSTOM_ID: github-copilot
-  :END:
 ** What /Copilot/ is
-   :PROPERTIES:
-   :CUSTOM_ID: what-copilot-is
-   :END:
 Microsoft-owned /GitHub/ has caused quite a bit of commotion in the
 software scene [free or otherwise] with the announcement of /GitHub
 Copilot/, an ML using extension for Visual Studio Code trained on code
@@ -266,7 +404,7 @@ a chance to analyze what kind of code is accepted more often.
     :CUSTOM_ID: copilot-might-not-be-useful
     :END:
 #+ATTR_HTML: :width 100% :height 100%
-#+CAPTION: Source: [fast.ai](https://www.fast.ai)
+#+CAPTION:[[https://www.fast.ai][Source]]
 [[file:data/IntelliCodeUsageExamples.gif]]
 
 I've been going on about the legal implications of this product, mainly
